--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="bottom"
     android:background="#FA0425"
+    android:paddingBottom="20dp"
     tools:context=".ComposeActivity">
 
     <com.google.android.material.textfield.TextInputLayout
@@ -39,6 +41,8 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:text="@string/tweet" />
+
     </com.google.android.material.textfield.TextInputLayout>
+
 </RelativeLayout>
 
