--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -7,6 +7,16 @@
     android:background="#FA0425"
     tools:context=".TimelineActivity">
 
+    <TextView
+        android:id="@+id/text_view_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:text="@string/date"
+        android:textColor="#E7EAF4"
+        android:textSize="9sp" />
+
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeContainer"
@@ -30,5 +40,19 @@
         android:autoLink="all"
         android:linksClickable="true"
         />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|right"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="16dp"
+        android:paddingBottom="10dp"
+        android:src="@android:drawable/ic_menu_compass"
+        app:fabSize="normal"
+        app:backgroundTint="#DCF8DF03"
+        app:layout_anchorGravity="bottom|right|end" />
 
 </RelativeLayout>
